--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 body{
-    background-color: whitesmoke;
+    background-color: #f5f5f5;
     padding: 30px;
     margin: 0px;
 }
@@ -25,7 +25,7 @@ body{
 }
 
 .grid img{
-    border: 2px solid black;
+    border: 2px solid #000000;
     border-radius: 50px;
     padding: 10px;
 }
@@ -36,7 +36,7 @@ body{
 
 .origami{
     border-radius: 20px;
-    background-color: white;
+    background-color: #ffffff;
     padding: 20px;
 
     width:310px;
